tests/e2e/semantics/foreach_scope.error
Error: syntax error in story at line 3, column 5

3|    b = a
          ^

E0101: Variable `a` has not been defined.
